# basicpitch.cpp

./: Makefile  README.md  midi-inspector.js  server.js
scripts/: build-ort-wasm.sh
src/: basicpitch.hpp  midi_notes.cpp  ort_inference.cpp
src_cli/: CMakeLists.txt  basicpitch.cpp  basicpitch_daemon.cpp
src_wasm/: CMakeLists.txt  basicpitch.cpp
web/: app.js  basicpitch.js  basicpitch.wasm  index.html  midi-inspector.html  server.js  worker.js
